kubeingress/kubeingress-lb-dp.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: main-ingress-lb
  namespace: dummy
  labels:
    k8s-app: main-ingress-lb
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: main-ingress-lb
  template:
    metadata:
      labels:
        k8s-app: main-ingress-lb
        name: main-ingress-lb
    spec:
      terminationGracePeriodSeconds: 60
      containers:
      - image: gcr.io/google_containers/nginx-ingress-controller:0.8.2
        name: nginx-ingress-lb
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /healthz
            port: 10249
            scheme: HTTP
          initialDelaySeconds: 30
          timeoutSeconds: 5
        # use downward API
        ports:
        - containerPort: 80
        - containerPort: 443
        # we expose 8080 to access nginx stats in url /nginx-status
        # this is optional
        - containerPort: 8080
        args:
        - /nginx-ingress-controller
        - --default-backend-service=dummy/default-http-backend
        - --watch-namespace=dummy
        - --v=3
        - --sync-period=5s
