kubeingress/default-backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: default-http-backend
  namespace: dummy
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    k8s-app: default-http-backend
  type: LoadBalancer
